--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,12 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=kinomania2137@gmail.com
+spring.mail.password=gpeugldubllbfxsp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 security.jwt.secret-key= supertajnykodconiktnastoprocentgonieodgadnie
